<resources>
    <string name="app_name" translatable="false">To Do</string>

    <string name="text_input_dialog_enter_name">Enter name</string>
    <string name="text_input_dialog_cancel">Cancel</string>
    <string name="text_input_dialog_ok">OK</string>

    <string name="bottom_sheet_rename">Rename</string>
    <string name="bottom_sheet_delete">Delete</string>

    <string name="user_confirmation_dialog_yes">Yes</string>
    <string name="user_confirmation_dialog_no">No</string>
...
